--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Game</title>
     <style>
-        body { margin: 0; overflow: hidden; background-color: lightblue; }
-        #speed-indicator {
+        body {
+            margin: 0;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+        }
+        canvas {
+            background-color: skyblue;
+        }
+        #speedDisplay {
             position: absolute;
-            top: 20px;
-            left: 20px;
-            background: rgba(0, 0, 0, 0.7);
+            top: 10px;
+            left: 10px;
+            background: rgba(0, 0, 0, 0.5);
             color: white;
-            padding: 10px;
+            padding: 5px;
             border-radius: 5px;
-            font-size: 18px;
         }
     </style>
 </head>
 <body>
-    <div id="speed-indicator">Speed: 0</div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <div id="speedDisplay">Speed: 0</div>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
