--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
+// index.html
+
 <!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Game</title>
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: black;
-        }
-        canvas {
-            display: block;
+        body { margin: 0; overflow: hidden; background: black; }
+        canvas { display: block; }
+        #steering-wheel {
+            position: absolute; bottom: 20px; left: 20px;
+            width: 100px; height: 100px; background: gray;
+            border-radius: 50%;
         }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div id="steering-wheel"></div>
     <script src="script.js"></script>
 </body>
 </html>
