--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
-// index.html
-
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html was>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Game</title>
     <style>
-        body { margin: 0; overflow: hidden; background: black; }
-        canvas { display: block; }
-        #steering-wheel {
-            position: absolute; bottom: 20px; left: 20px;
-            width: 100px; height: 100px; background: gray;
-            border-radius: 50%;
-        }
+        canvas { border: 1px solid black; }
+        body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <div id="steering-wheel"></div>
-    <script src="script.js"></script>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
